mending the CSS for github

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,5 +1,7 @@
 <header class="header">
-	<div class="logo"></div>
+	<div class="logo">
+		
+	</div>
 	<h1 class="name">
 		<span class="names name--one">actuated</span><!-- 
 		--><span class="names name--two">futures</span>
