more updates for github compatibility

--- a/_includes/javascript.html
+++ b/_includes/javascript.html
@@ -1,5 +1,5 @@
-<script src="js/all.min.js"></script>
-<script src="js/main.js"></script>
+<script src="{{site.url}}/js/all.min.js"></script>
+<script src="{{site.url}}/js/main.js"></script>
 
 <!-- Google Analytics: change UA-XXXXX-X to be your site's ID. -->
 <script>
