--- a/_includes/html_head.html
+++ b/_includes/html_head.html
@@ -9,6 +9,6 @@
         <!-- Place favicon.ico and apple-touch-icon(s) in the root directory -->
         <link href='http://fonts.googleapis.com/css?family=Exo+2:100italic,300,300italic,700,700italic' rel='stylesheet' type='text/css'>
         <link rel="stylesheet" href="{{site.url}}/css/main.css">
-        <script src="/js/modernizr.js"></script>
+        <script src="{{site.url}}/js/modernizr.js"></script>
     </head>
 <body>
