--- a/css/main.css
+++ b/css/main.css
@@ -1500,7 +1500,7 @@ h2 { margin-bottom: 8px; }
 /* line 1, ../../dev/sass/_header.scss */
 .header { padding-top: 6px; background-color: rgba(0, 0, 0, 0.1); }
 /* line 5, ../../dev/sass/_header.scss */
-.header .logo { display: block; width: 100%; height: 0; padding-top: 42%; }
+.header .logo { display: block; width: 100%; height: 0; background: transparent url(../img/logo.svg) no-repeat scroll center center; background-size: contain; padding-top: 42%; }
 @media only screen and (min-width: 30em) { /* line 5, ../../dev/sass/_header.scss */
   .header .logo { padding-top: 21%; } }
 @media only screen and (min-width: 48em) { /* line 5, ../../dev/sass/_header.scss */
