added colours, changed the logo and did some more tidying.

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,10 +1,10 @@
 <header class="header">
 	<div class="logo">
-		
+		<div class="svg-wrapper" style="padding-top:82%;">{% include cutoutlogo.svg %}</div>
 	</div>
 	<h1 class="name">
-		<span class="names name--one">actuated</span><!-- 
-		--><span class="names name--two">futures</span>
+		<span class="names name--one t-red">actuated</span><!-- 
+		--><span class="names name--two t-blue">futures</span>
 	</h1><!-- .name -->
 </header>
 
