added a different logo - as requested.

--- a/_includes/top.html
+++ b/_includes/top.html
@@ -1,6 +1,6 @@
 <header class="header">
 	<div class="logo">
-		<div class="svg-wrapper" style="padding-top:83%;">{% include cutoutlogo.svg %}</div>
+		<div class="svg-wrapper" style="padding-top:83%;">{% include coloured-logo.svg %}</div>
 	</div>
 	<h1 class="name">
 		<span class="names name--one t-red">actuated</span><!-- 
@@ -10,7 +10,7 @@
 
 <nav class="topnav" id="showmenu">
 	<ul class="nav">
-		<li class="control menu"><a href="#showmenu">menu<span class="icon-arrow-down icon-right"></span></a></li>
+		<li class="control menu"><a href="#showmenu">menu<span class="icon-menu icon-right"></span></a></li>
 		<li class="control hide"><a href="#hidemenu">hide<span class="icon-arrow-up icon-right"></span></a></li>
 		{% for link in site.navigation %}
 	    	{% assign current = nil %}
