did some work on the footer

--- a/_includes/bottom.html
+++ b/_includes/bottom.html
@@ -1,5 +1,31 @@
 <footer class="footer">
-
+	<h2 class="footer--subhead">
+		<div class="svg-wrapper" style="padding-top:5.2%;">{% include futurecities-cutout.svg %}</div>
+	</h2>
+	<div class="wrap">
+		<div class="grid">
+			<div class="grid__item lap-and-up-two-thirds">
+				<div class="box">
+					<h3 class="beta">Contact</h3>
+					<!-- <p>Get in touch we'd love to hear from you</p> -->
+					<ul class="social">
+					<li><span class="icon-phone"></span><a href="tel:+447833488697">+44 (0) 7833 488697</a></li>
+					<li class="email"><span class="icon-mail"></span><a>paul[at]actuatedfutures.com</a></li>
+					<li class="email"><span class="icon-mail"></span><a>phil[at]actuatedfutures.com</a></li>
+					<li class="email"><span class="icon-mail"></span><a>matt[at]actuatedfutures.com</a></li>
+					</ul>
+				</div>
+			</div><div class="grid__item lap-and-up-one-third">
+				<div class="box">
+					<h3 class="beta">On the web</h3>
+					<ul class="social">
+					<li><span class="icon-twitter"></span><a href="http://twitter.com/actuatedfutures/">follow us</a></li>
+					<li><span class="icon-github"></span><a href="http://github.com/actuatedfutures/">fork us</a></li>
+					</ul>
+				</div>
+			</div>
+		</div>
+	</div>
 </footer>
 </body>
 </html>
